# ESP32-UI

./: README.md
.embeddedskills/: config.json  state.json
docs/: esp32-wroom-32-datasheet.md  lcd_driver_info.md  lcd_integration_plan.md  porting_oled_ui_core.md  project_design.md
main/: CMakeLists.txt  Kconfig.projbuild  input.c  lcd_st7735.c  lcd_st7735.h  lcd_ui.c  lcd_ui.h  main.c  main.h  ui.c  version.h
main/drivers/: display.c  display.h  display_layout.h  font_6x8.c  font_6x8.h  lcd_st7735.c  lcd_st7735.h  ssd1306.c  ssd1306.h
main/input/: calibrate.c  calibrate.h  input.c  input.h
main/tests/: circle_test.c  circle_test.h  display_test.c  display_test.h  snake.c  snake.h  test_ui.c  test_ui.h
main/ui/: about.c  about.h  menu.c  menu.h  ui.c  ui.h  ui_common.c  ui_common.h
scripts/: bump-version.ps1  increment_build.py
